add all state images

--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,7 @@ main {
 }
 
 img {
-    height: 200px;
-    width: 200px;
+    height: 200px;;
 }
 
 /*---------------------------Misc Styles---------------------------*/
