update input styling

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,11 @@ main {
     border-bottom: 1px dotted darkgray;
 }
 
+input:focus {
+    outline: none;
+    background-color: #beb5ad;
+}
+
 .cover {
     background-image: url(../assets/passportBCCover.png);
 }
