--- a/css/style.css
+++ b/css/style.css
@@ -1,193 +1,230 @@
 * {
-    box-sizing: border-box;
-}
-  
-body {
-    margin: 0;
-    font-family: 'Lekton', cursive;
-    display: grid;
-    grid-template-columns: 250px 4fr 1fr; 
-    height: 100vh;
-    background-color: #f3e7c7;  
+	box-sizing: border-box;
 }
 
+body {
+	margin: 0;
+	font-family: 'Lekton', cursive;
+	display: grid;
+	grid-template-rows: 1fr 1fr;
+	height: 100vh;
+	background-color: #f3e7c7;
+}
+
+#splash {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	height: 100vh;
+	background-color: black;
+	color: white;
+}
+
+#backstory {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+}
+
+#backstory p {
+	width: 80%;
+}
+
+#instructions-right {
+	display: grid;
+	grid-template-rows: 1fr;
+}
+
+#instructions {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+}
+
+#game-board {
+	display: grid;
+	grid-template-columns: 250px 4fr 1fr;
+	height: 100vh;
+}
 /*---------------------------Aside Styles---------------------------*/
 
 aside {
-    background-color: #e7c9a9;
-    display: grid;
-    grid-template-rows: 2fr 1fr 5fr;
+	background-color: #e7c9a9;
+	display: grid;
+	grid-template-rows: 2fr 1fr 5fr;
 }
 
 #score-board {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 3em;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 3em;
 }
 
 #failures-text {
-    padding-left: 5%;
+	padding-left: 5%;
 }
 
 #failures-badges {
-    display: flex;
-    justify-content: space-around;
+	display: flex;
+	justify-content: space-around;
 }
 
 #state-board {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 table {
-    width: 80%;
-    height: 80%;
+	width: 80%;
+	height: 80%;
 }
 
 td {
-    border: 1px solid black; 
-    width: 25%;
-    height: 8%;
+	border: 1px solid black;
+	width: 25%;
+	height: 8%;
 }
 
 td p {
-    margin: 0;
-    display: flex;
-    justify-content: center;
+	margin: 0;
+	display: flex;
+	justify-content: center;
 }
 
 .inactive {
-    color: gray;
+	color: gray;
 }
 
 .active {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .state-complete {
-    color: green;
-    transform: rotate(-25deg);
+	color: green;
+	transform: rotate(-25deg);
 }
 
 /*---------------------------Main Styles---------------------------*/
 
 main {
-    color: #131313;
-    display: grid;
-    grid-template-rows: 100px 1fr;
-    /* flex-direction: column;
+	color: #131313;
+	display: grid;
+	grid-template-rows: 100px 1fr;
+	/* flex-direction: column;
     justify-content: center;
     align-items: center; */
-  }
-
-#text-box {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
+#text-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 
 #card-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .card {
-    width: 300px;
-    height: 450px;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    background-color: #ece0d7;
+	width: 300px;
+	height: 450px;
+	display: flex;
+	flex-direction: column;
+	/* justify-content: center; */
+	align-items: center;
+	background-color: #ece0d7;
 }
 
 .card div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 }
 
 .card p {
-    margin-top: 15px;
+	margin-top: 15px;
 }
 
 .card input {
-    background-color: #ece0d7;
-    border: none;
-    border-bottom: 1px dotted darkgray;
+	background-color: #ece0d7;
+	border: none;
+	border-bottom: 1px dotted darkgray;
 }
 
 input:focus {
-    outline: none;
-    background-color: #beb5ad;
+	outline: none;
+	background-color: #beb5ad;
 }
 
 .cover {
-    background-image: url(../assets/passportBCCover.png);
+	background-image: url(../assets/passportBCCover.png);
 }
 
 .game-page {
-    background-image: url(../assets/passportPage.png);
+	background-image: url(../assets/passportPage.png);
 }
 
 .failure-page {
-    background-image: url(../assets/failurePage.png);
+	background-image: url(../assets/failurePage.png);
 }
 
 /*---------------------------Reset Bar Styles---------------------------*/
 
 #reset-bar {
-    display: grid;
-    grid-template-rows: 1fr 3fr 2fr;
+	display: grid;
+	grid-template-rows: 1fr 3fr 2fr;
 }
 
 #logo-board {
-    display: flex;
-    justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
 }
 
 #corner-logo {
-    height: 100px;
-    width: 100px;
-    padding-right: 20px;
+	height: 100px;
+	width: 100px;
+	padding-right: 20px;
 }
 
 #reset-board {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #reset-btn {
-    transform: rotate(20deg);
-    width: 120px;
-    height: 75px;
-    font-size: 26px;
+	transform: rotate(20deg);
+	width: 120px;
+	height: 75px;
+	font-size: 26px;
 }
 
 #corner-paper-board {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
 }
 
 #corner-papers {
-    height: 200px;
-    width: 200px;
+	height: 200px;
+	width: 200px;
 }
 
 .card img {
-    height: 140px;
-    max-width: 200px;
-    margin-bottom: 10px;
+	height: 140px;
+	max-width: 200px;
+	margin-bottom: 10px;
 }
 
 /*---------------------------Misc Styles---------------------------*/
 
 .correct {
-    background-color: limegreen;
+	background-color: limegreen;
 }
