update css to be more responsive

--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ input:focus {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
+	align-items: flex-end;
 }
 
 #corner-papers {
