--- a/css/style.css
+++ b/css/style.css
@@ -246,5 +246,5 @@ input:focus {
 /*---------------------------Misc Styles---------------------------*/
 
 .correct {
-	background-color: limegreen;
+	background-color: rgb(55, 223, 55);
 }
